examples/valid/program32.c
float get_float(void) {
    return 3.14;
}

int main(void) {
    float f;
    f = get_float();
    return 0;
}

