examples/invalid/program25.c
void f(void) {
    return 5;
}

int main(void) {
    f();
    return 0;
}

